# kllama.cpp

./: .gitmodules  LICENSE.txt
kotlin-library/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
kotlin-library/demo-jvm/: build.gradle.kts
kotlin-library/demo-jvm/src/main/kotlin/io/actinis/kllama_cpp/demo/jvm/: Main.kt
kotlin-library/gradle/: libs.versions.toml
kotlin-library/scripts/: code2prompt.sh
native/: CMakeLists.txt  README.md
native/cmake/helpers/cpu/: CPUHelpers.cmake
native/cmake/helpers/misc/: BuildTypeHelpers.cmake
native/cmake/helpers/platform/: AndroidHelpers.cmake  IOSHelpers.cmake  PlatformHelpers.cmake
native/logging/: CMakeLists.txt
native/logging/include/logging/: logging.h
native/logging/src/demo/: main.cpp
native/scripts/: code2prompt.sh
native/wrappers/llama.cpp/: CMakeLists.txt
