set(LLAMACPP_DIR "${CMAKE_SOURCE_DIR}/external/llama.cpp")
set(LLAMACPP_BINARY_DIR "${CMAKE_BINARY_DIR}/external/llama.cpp")

# TODO: Do we need LLAMA_LLGUIDANCE?

set(LLAMA_STANDALONE OFF CACHE BOOL "" FORCE)
set(LLAMA_USE_SYSTEM_GGML OFF CACHE BOOL "" FORCE)
set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
set(LLAMA_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(LLAMA_BUILD_TOOLS OFF CACHE BOOL "" FORCE)
set(LLAMA_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(LLAMA_BUILD_SERVER OFF CACHE BOOL "" FORCE)
set(LLAMA_CURL OFF CACHE BOOL "" FORCE)
set(LLAMA_LLGUIDANCE ON CACHE BOOL "" FORCE)

set(GGML_NATIVE ON CACHE BOOL "" FORCE)

if (LINUX)
    set(GGML_CUDA ON CACHE BOOL "" FORCE)
    set(GGML_CUDA_ENABLE_UNIFIED_MEMORY ON CACHE BOOL "" FORCE)
    set(GGML_CUDA_F16 ON CACHE BOOL "" FORCE)
    set(GGML_CUDA_FA_ALL_QUANTS ON CACHE BOOL "" FORCE)
endif ()

add_subdirectory(${LLAMACPP_DIR} ${LLAMACPP_BINARY_DIR})
